2013-10-14  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	* arm/cpu-init/rdimon-aem.S: Disable for M class cores.
	* arm/crt0.S: Don't call _rdimon_hw_init_hook for non-A class cores.
	* arm/cpu-init/Makefile.in (CPU_INIT_OBJS): Use CFLAGS.

2013-09-30  Steve Ellcey  <sellcey@mips.com>

	* mips/Makefile.in (install): Add mkdir, fix install command.

2013-09-27  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* arm/Makefile.in (RDIMON_SCRIPTS): Add aprofile-validation.specs.
	* arm/elf-aprofile-validation.specs: New.

2013-09-20  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
	    Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
	    Greta Yorsh  <greta.yorsh@arm.com>

	* arm/Makefile.in: Add support for cpu-init directory and add
	elf-aprofile-ve.specs.
	* arm/configure.in: Likewise.
	* arm/configure: Regenerate.
	* arm/cpu-init: New directory.
	* arm/cpu-init/Makefile.in: New file.
	* arm/cpu-init/rdimon-aem.S: Likewise.
	* arm/crt0.S: Call _rdimon_init_hook
	* arm/elf-aprofile-ve.specs: New file.

2013-09-18  Nick Clifton  <nickc@redhat.com>

	* msp430/Makefile.in (SCRIPTS): Add intr_vectors.ld.
	(LIB_CRT): New.
	(CRT_OBJS): New.
	(all): Add dependency upon LIB_CRT.
	(install): Likewise.
	* msp430/msp430-sim.ld: Include intr_vectors.ld.
	KEEP crt code, lowtext code and tm_clone_table.
	Separate the noinit section from the .bss section.
	Allow for extended .debug_line sections.
	* msp430/msp430.ld: Likewise.
	* msp430/msp430F5438A-l.ld: Likewise.
	* msp430/msp430F5438A-s.ld: Likewise.
	* msp430/msp430xl-sim.ld: Likewise
.	* msp430/crt_movedata.S: New.
	* msp430/crt_bss.S: New.
	* msp430/intr_vectors.ld: New.

2013-09-17  Joey Ye  <joey.ye@arm.com>

	* libnosys/Makefile.in: Install nosys.specs.
	* libnosys/nosys.specs: New specs.

2013-08-12  Yufeng Zhang  <Yufeng.Zhang@arm.com>

	* aarch64/crt0.S: Remove 'start'.
	* arm/crt0.S: Ditto.
	* arm/redboot-crt0.S: Ditto.

2013-07-24  Steve Ellcey  <sellcey@mips.com>
